fix: z-index issue after submitting an application

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,24 +6,12 @@
 @tailwind utilities;
 
 @layer components {
-  .apply-btn {
-    @apply hover:bg-[#FC61FF]/[.2] hover:duration-200 hover:ease-in-out;
-    @apply relative mx-8 ml-12 rounded-lg border border-solid border-[#FF42F7] py-1 px-8 text-[#FC61FF] [text-shadow:_0_0_10px_#FC61FF];
-    @apply after:absolute after:top-12 after:left-2 after:h-[5px] after:w-full after:skew-x-[30deg] after:bg-[#FF42F7] after:opacity-[.7] after:blur-sm after:content-[''];
+  .gradient-btn {
+    @apply z-10 flex cursor-pointer items-center gap-4 rounded-md bg-gradient-to-r from-[#72D6E6] to-[#173162] p-2 text-white transition-all duration-300 hover:brightness-110;
   }
-
-  .sponsor-btn {
-    @apply hover:bg-[#8CEAFF]/[.2] hover:duration-200 hover:ease-in-out;
-    @apply relative rounded-lg border border-solid border-[#8CEAFF] py-1 px-8 text-[#8CEAFF] [text-shadow:_0_0_10px_#8CEAFF];
-    @apply after:absolute after:top-12 after:left-2 after:h-[5px] after:w-full after:skew-x-[30deg] after:bg-[#8CEAFF] after:opacity-[.7] after:blur-sm after:content-[''];
+  .blue-btn {
+    @apply flex w-[min(300px,_90vw)] items-center justify-center gap-4 rounded-xl bg-[#5BA0BD] p-2 font-semibold text-white transition-opacity duration-300 ease-in-out hover:opacity-90 md:text-md;
   }
-  .neon-text {
-    @apply text-purple_main [text-shadow:_0_0_10px_#FF49ED];
-  }
-  .purple-btn {
-    @apply rounded-md bg-purple_main p-2 text-white hover:bg-[#b63487] hover:duration-200 hover:ease-in-out;
-  }
-
   .feed-popup {
     @apply bg-purple_dark text-white [box-shadow:_0_0_10px_#E149A9];
   }
@@ -32,9 +20,6 @@
   }
   .form-label {
     @apply font-medium uppercase text-[#72D6E6] md:text-md;
-  }
-  .form-label::placeholder {
-    @apply text-gray-500;
   }
   .form-input {
     @apply mt-2 mb-4 rounded-md border-2 border-[#888888] bg-[#070710] p-2;
